# VyEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Notes.txt  README.md  build.bat  configure.bat
Source/VyEditor/: Application.cpp  Application.hpp  CMakeLists.txt  Editor.h  EditorApp.cpp  EditorApp.h  EditorApplication.cpp  EditorApplication.h  EntryPoint.cpp
Source/VyEditor/Editor/: Editor.cpp  Editor.h  EditorApp.cpp  EditorApp.h
Source/VyEngine/: CMakeLists.txt  EnginePCH.h  defines.h
Source/VyEngine/App/: App.cpp  App.h  MainLoop.cpp
Source/VyEngine/Containers/: Allocator.cpp  Allocator.h  Hash.h  Pointers.h  RefCounted.cpp  RefCounted.h
Source/VyEngine/Core/: Base.h  Context.cpp  Context.h  RefCounted.cpp  RefCounted.h
Source/VyEngine/Core/Interfaces/: INonCopyable.h
Source/VyEngine/Core/Object/: Object.cpp  Object.h
Source/VyEngine/Core/VyObject/: VyObject.cpp  VyObject.h
Source/VyEngine/ECS/: Entity.cpp  Entity.h
Source/VyEngine/ECS/Components/: AComponent.cpp  AComponent.h  CTransform.h
Source/VyEngine/Engine/: Application.cpp  Application.h  Application.hpp  Engine.cpp  Engine.h
Source/VyEngine/Engine/Configuration/: Startup.cpp  Startup.h  SubSystem.h
Source/VyEngine/Event/: Event.h  Event.hpp  Event.inl  EventDispatcher.hpp
Source/VyEngine/Event/Events/: EngineEvents.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Source/VyEngine/Graphics/Core/: Buffer.h  IndexBuffer.h  ShaderProgram.h  ShaderStage.h  VertexArray.h  VertexBuffer.h
Source/VyEngine/Graphics/Data/: EBuffer.h  EData.h  EModel.h  EPixel.h  ERender.h  EShader.h  ShaderResults.h  UniformInfo.h  VertexAttrib.h
Source/VyEngine/Graphics/Driver/: Driver.cpp  Driver.h
Source/VyEngine/Render/Device/: Device.cpp  Device.h  DeviceConfig.h
Source/VyEngine/Support/: Assert.cpp  Assert.h
Source/VyEngine/Support/Logger/: LogDef.h  Logger.cpp  Logger.h
Source/VyEngine/Utils/: EnumMapper.hpp  Hash.h
Source/VyEngine/Utils/Time/: Clock.cpp  Clock.h
Source/VyEngine/Window/: Window.cpp  Window.h
Source/VyEngine/Window/Config/: DeviceConfig.h  WindowConfig.h
Source/VyEngine/Window/Data/: ECursor.h  EInput.h  WindowData.h
Source/VyEngine/Window/Device/: Device.cpp  Device.h
Source/VyEngine/Window/Input/: IInputEventCallbacks.h  InputDef.h
Source/VyVendor/: CMakeLists.txt
Source/VyVendor/EASTL/: CMakeLists.txt
Source/VyVendor/glad/: CMakeLists.txt
Source/VyVendor/imgui/: CMakeLists.txt
VyEngine/: CMakeLists.txt
VyEngine/VyLib/: CMakeLists.txt  vy_crc32.hpp  vy_macro.hpp
VyEngine/VyLib/logger/: vy_core.hpp  vy_log_data.hpp  vy_log_settings.hpp  vy_logger.cpp  vy_logger.hpp  vy_platform.cpp  vy_platform.hpp
VyEngine/assets/models/backpack/: source_attribution.txt
VyEngine/assets/shaders/: model.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
VyEngine/include/: CMakeLists.txt  camera.hpp  input.hpp  mesh.hpp  model.hpp  shader.hpp  shader_program.hpp  texture.hpp  vy_file.hpp  vy_glfw.hpp  vy_logger.hpp  window.hpp
VyEngine/include/VyLib/: vy_glfw.hpp
VyEngine/include/core/: engine.hpp  vy_glfw.hpp  window.hpp
VyEngine/include/gui/: vy_gui.hpp
VyEngine/include/io/: camera.hpp
VyEngine/include/render/: mesh.hpp  model.hpp  shader.hpp
VyEngine/libraries/: CMakeLists.txt
VyEngine/libraries/glad/: CMakeLists.txt
VyEngine/libraries/glad/src/: glad.c
VyEngine/libraries/imgui/: CMakeLists.txt
VyEngine/runtime/: CMakeLists.txt
VyEngine/runtime/VyLib/: vy_core.hpp  vy_file.cpp  vy_file.hpp  vy_glfw.cpp  vy_logger.cpp  vy_logger.hpp
VyEngine/runtime/camera/: camera_base.cpp  camera_controller.cpp  perspec_camera.hpp
VyEngine/runtime/core/: application.cpp  application.hpp  entry_point.hpp  main.cpp  settings_config.cpp  timer.hpp  vy_glfw.cpp  vy_glfw.hpp  window.cpp  window.hpp
VyEngine/runtime/event/: CMakeLists.txt  event.hpp  event_handler.hpp  event_manager.cpp  event_manager.hpp
VyEngine/runtime/event/events/: app_event.hpp  key_event.hpp  mouse_event.hpp
VyEngine/runtime/gui/: vy_gui.cpp  vy_gui.hpp
VyEngine/runtime/input/: camera.cpp  input.cpp  input.hpp
VyEngine/runtime/platform/OpenGL/: gl_buffer.cpp  gl_callback.cpp  gl_callback.hpp  gl_context.cpp  gl_context.hpp  gl_input.cpp  gl_input.hpp
VyEngine/runtime/platform/Windows/: base_window.cpp  base_window.hpp  gl_window.cpp
VyEngine/runtime/render/: buffer.hpp  gl_buffer.cpp  gl_buffer.hpp  gl_vertex_array.cpp  gl_vertex_array.hpp  graphics_context.cpp  graphics_context.hpp  model.hpp  shader.cpp  shader_program.hpp  vertex_array.cpp  vertex_array.hpp
VyEngine/src/: CMakeLists.txt  VyEngine.hpp  camera.cpp  input.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  shader_program.cpp  vertex_memory.hpp  vy_file.cpp  vy_glfw.cpp  vy_logger.cpp  vy_math3D.hpp  window.cpp
VyEngine/src/VyLib/: CMakeLists.txt  vy_core.hpp  vy_file.cpp  vy_file.hpp  vy_glfw.cpp  vy_logger.cpp  vy_logger.hpp  vy_macro.hpp
VyEngine/src/camera/: camera_base.hpp  camera_controller.cpp  camera_controller.hpp  perspec_camera.cpp
VyEngine/src/core/: application.cpp  application.hpp  entry_point.hpp  layer.hpp  main.cpp  scene.hpp  settings_config.hpp  vy_glfw.cpp  window.cpp  window.hpp
VyEngine/src/event/: event.hpp  event_handler.hpp
VyEngine/src/event/events/: mouse_event.hpp
VyEngine/src/gui/: vy_gui.cpp
VyEngine/src/input/: input.cpp  input.hpp  input_codes.hpp
VyEngine/src/io/: camera.cpp  input.cpp
VyEngine/src/memory/: vertex_memory.hpp
VyEngine/src/object/: model.cpp
VyEngine/src/platform/OpenGL/: gl_buffer.hpp  gl_callback.cpp  gl_input.cpp  gl_input.hpp  (+4 more)
VyEngine/src/render/: CMakeLists.txt  base_renderer.cpp  base_renderer.hpp  buffer.cpp  buffer.hpp  graphics_context.hpp  mesh.cpp  mesh.hpp  model.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  vertex.hpp  vertex_array.cpp
VyEngine/src/resource/: model_importer.hpp
VyEngine/src/shader/: shader_program.cpp
sample/Sandbox/: CMakeLists.txt
sample/Sandbox/src/: model_sandbox.cpp  model_sandbox.hpp  sandbox_app.cpp  sandbox_app.hpp
(+41 files in other folders)
