
# set(SANDBOX_SOURCES
#     src/sandbox_app.cpp
#     src/sandbox_app.hpp
#     src/model_sandbox.cpp
#     src/model_sandbox.hpp
# )

# set(PROJECT_INC_DIRS
#     ${CMAKE_CURRENT_SOURCE_DIR}/src
# )

# set(APP_NAME Sandbox)

# add_executable(${APP_NAME} ${SANDBOX_SOURCES})

# target_link_libraries(${APP_NAME} PUBLIC VyEngine)

# target_include_directories(${APP_NAME} PRIVATE ${PROJECT_INC_DIRS})


# message(STATUS "[App Name: ${APP_NAME}]\n")